temporary add release-0.2.0 branch to release-please (#27)

--- a/.github/release-please.yml
+++ b/.github/release-please.yml
@@ -1,2 +1,6 @@
 releaseType: python
 handleGHRelease: true
+branches:
+- handleGHRelease: true
+  releaseType: python
+  branch: dataproc-spark-connect-v0
