--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -2,7 +2,7 @@ google-api-core>=2.19
 google-cloud-dataproc>=5.18
 packaging>=20.0
 pyink~=24.0
-pyspark[connect]~=3.5.1
+pyspark[connect]>=3.5.1,<5.0
 setuptools>=72.0
 tqdm>=4.67
 websockets>=14.0
