Update workflow to run on for4 branch for testing

--- a/.github/workflows/test-matrix.yaml
+++ b/.github/workflows/test-matrix.yaml
@@ -15,7 +15,7 @@
 name: Test Matrix - PySpark Versions
 on:
   push:
-    branches: [ main, prod ]
+    branches: [ main, prod, for4 ]
   pull_request:
     branches: [ main, prod ]
 
