feat: adding more vars into .env

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,9 @@
-# Google Cloud Configuration for Dataproc Spark Connect Integration
+# Google Cloud Configuration for Dataproc Spark Connect Integration Tests
 # Copy this file to .env and fill in your actual values
+
+# ============================================================================
+# REQUIRED CONFIGURATION
+# ============================================================================
 
 # Your Google Cloud Project ID
 GOOGLE_CLOUD_PROJECT="your-project-id"
@@ -10,12 +14,47 @@ GOOGLE_CLOUD_REGION="us-central1"
 # Subnet name for Dataproc Spark Connect (without project/region prefix)
 DATAPROC_SPARK_CONNECT_SUBNET="your-subnet-name"
 
-# Path to service account key file (if using SERVICE_ACCOUNT auth)
-GOOGLE_APPLICATION_CREDENTIALS="/path/to/your/service-account-key.json"
+# ============================================================================
+# AUTHENTICATION CONFIGURATION
+# ============================================================================
 
-# Optional: Custom Dataproc API endpoint (uncomment if needed)
-# GOOGLE_CLOUD_DATAPROC_API_ENDPOINT="your-region-dataproc.googleapis.com"
-
-# Optional: Authentication type (defaults to SERVICE_ACCOUNT)
+# Authentication type (SERVICE_ACCOUNT or END_USER_CREDENTIALS). If not set, API default is used.
 # DATAPROC_SPARK_CONNECT_AUTH_TYPE="SERVICE_ACCOUNT"
 # DATAPROC_SPARK_CONNECT_AUTH_TYPE="END_USER_CREDENTIALS"
+
+# Service account email for workload authentication (optional)
+# DATAPROC_SPARK_CONNECT_SERVICE_ACCOUNT="your-service-account@your-project.iam.gserviceaccount.com"
+
+# Path to service account key file (if using SERVICE_ACCOUNT auth)
+# GOOGLE_APPLICATION_CREDENTIALS="/path/to/your/service-account-key.json"
+
+# ============================================================================
+# SESSION CONFIGURATION
+# ============================================================================
+
+# Session timeout in seconds (how long session stays active)
+# DATAPROC_SPARK_CONNECT_TTL_SECONDS="3600"
+
+# Session idle timeout in seconds (how long session stays active when idle)
+# DATAPROC_SPARK_CONNECT_IDLE_TTL_SECONDS="900"
+
+# Automatically terminate session when Python process exits (true/false)
+# DATAPROC_SPARK_CONNECT_SESSION_TERMINATE_AT_EXIT="false"
+
+# Custom file path for storing active session information
+# DATAPROC_SPARK_CONNECT_ACTIVE_SESSION_FILE_PATH="/tmp/dataproc_spark_connect_session"
+
+# ============================================================================
+# DATA SOURCE CONFIGURATION
+# ============================================================================
+
+# Default data source for Spark SQL (currently only supports "bigquery")
+# Only available for Dataproc runtime version 2.3
+# DATAPROC_SPARK_CONNECT_DEFAULT_DATASOURCE="bigquery"
+
+# ============================================================================
+# ADVANCED CONFIGURATION
+# ============================================================================
+
+# Custom Dataproc API endpoint (uncomment if needed)
+# GOOGLE_CLOUD_DATAPROC_API_ENDPOINT="your-region-dataproc.googleapis.com"
