fix: update the subnet comments and example

--- a/.env.example
+++ b/.env.example
@@ -11,8 +11,9 @@ GOOGLE_CLOUD_PROJECT="your-project-id"
 # Google Cloud Region where Dataproc sessions will be created
 GOOGLE_CLOUD_REGION="us-central1"
 
-# Subnet name for Dataproc Spark Connect (without project/region prefix)
-DATAPROC_SPARK_CONNECT_SUBNET="your-subnet-name"
+# Subnet URI for Dataproc Spark Connect (full resource name format)
+# Example: projects/your-project-id/regions/us-central1/subnetworks/your-subnet-name
+DATAPROC_SPARK_CONNECT_SUBNET="projects/your-project-id/regions/us-central1/subnetworks/your-subnet-name"
 
 # ============================================================================
 # AUTHENTICATION CONFIGURATION
