--- a/.env.example
+++ b/.env.example
@@ -11,9 +11,8 @@ GOOGLE_CLOUD_PROJECT="your-project-id"
 # Google Cloud Region where Dataproc sessions will be created
 GOOGLE_CLOUD_REGION="us-central1"
 
-# Subnet URI for Dataproc Spark Connect (full resource name format)
-# Example: projects/your-project-id/regions/us-central1/subnetworks/your-subnet-name
-DATAPROC_SPARK_CONNECT_SUBNET="projects/your-project-id/regions/us-central1/subnetworks/your-subnet-name"
+# Path to service account key file (if using SERVICE_ACCOUNT auth)
+GOOGLE_APPLICATION_CREDENTIALS="/path/to/your/service-account-key.json"
 
 # ============================================================================
 # AUTHENTICATION CONFIGURATION
@@ -25,9 +24,6 @@ DATAPROC_SPARK_CONNECT_SUBNET="projects/your-project-id/regions/us-central1/subn
 
 # Service account email for workload authentication (optional)
 # DATAPROC_SPARK_CONNECT_SERVICE_ACCOUNT="your-service-account@your-project.iam.gserviceaccount.com"
-
-# Path to service account key file (if using SERVICE_ACCOUNT auth)
-# GOOGLE_APPLICATION_CREDENTIALS="/path/to/your/service-account-key.json"
 
 # ============================================================================
 # SESSION CONFIGURATION
@@ -59,3 +55,9 @@ DATAPROC_SPARK_CONNECT_SUBNET="projects/your-project-id/regions/us-central1/subn
 
 # Custom Dataproc API endpoint (uncomment if needed)
 # GOOGLE_CLOUD_DATAPROC_API_ENDPOINT="your-region-dataproc.googleapis.com"
+
+# Subnet URI for Dataproc Spark Connect (full resource name format)
+# Example: projects/your-project-id/regions/us-central1/subnetworks/your-subnet-name
+# DATAPROC_SPARK_CONNECT_SUBNET="projects/your-project-id/regions/us-central1/subnetworks/your-subnet-name"
+
+
